# SecureZip

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TASKS.md  flutter_rust_bridge.yaml  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: build.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/sezip/sezip/: MainActivity.kt  RustBridge.kt  SeZipApp.kt
android/app/src/main/kotlin/com/sezip/sezip/data/: PasswordRepository.kt  PreferencesManager.kt
android/app/src/main/kotlin/com/sezip/sezip/model/: CompressModels.kt  MappingEntry.kt  PasswordEntry.kt  PendingCompressTask.kt  WebDavModels.kt
android/app/src/main/kotlin/com/sezip/sezip/navigation/: NavGraph.kt
android/app/src/main/kotlin/com/sezip/sezip/screens/: CompressProgressScreen.kt  CompressResultScreen.kt  CompressScreen.kt  DecompressScreen.kt  HomeScreen.kt  MappingsScreen.kt  PasswordsScreen.kt  PhotoBackupScreen.kt  SettingsScreen.kt  WebDavFilesScreen.kt  WebDavScreen.kt
android/app/src/main/kotlin/com/sezip/sezip/ui/components/: FeatureCard.kt  PasswordField.kt  ProgressCard.kt
android/app/src/main/kotlin/com/sezip/sezip/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/kotlin/com/sezip/sezip/util/: FileUtils.kt  FormatUtils.kt
android/app/src/main/kotlin/com/sezip/sezip/viewmodel/: CompressProgressViewModel.kt  CompressViewModel.kt  DecompressViewModel.kt  PasswordsViewModel.kt  PhotoBackupViewModel.kt  SettingsViewModel.kt  WebDavViewModel.kt
docs/: architecture.md  build.md  data-compatibility.md  jni-api.md  security.md
lib/: app.dart  main.dart  router.dart  theme.dart
lib/ffi/: rust_compress_ffi.dart
lib/models/: compress_options.dart  mapping_entry.dart  password_entry.dart  webdav_config.dart
lib/pages/: compress_page.dart  compress_progress_page.dart  compress_result_page.dart  decompress_page.dart  home_page.dart  mappings_page.dart  passwords_page.dart  settings_page.dart  webdav_files_page.dart  webdav_page.dart
lib/services/: compress_service.dart  crypto_service.dart  mapping_service.dart  password_service.dart  rust_compress_service.dart  settings_service.dart  webdav_service.dart
lib/src/rust/: frb_generated.dart  lib.dart
lib/widgets/: file_list_tile.dart  password_field.dart  progress_card.dart
rust/: .gitignore  Cargo.toml  pubspec.yaml
rust/.cargo/: config.toml
rust/android/app/: build.gradle.kts
rust/android/app/src/main/kotlin/com/sezip/rust/: MainActivity.kt
rust/crates/sz-compress/: Cargo.toml
rust/crates/sz-compress/src/: encrypted.rs  lib.rs  sevenz.rs  smart_decompress.rs  tar_zstd.rs
rust/crates/sz-compress/src/zbak/: chunker.rs  crypto.rs  format.rs  mod.rs  reader.rs  recovery.rs  split.rs  uploader.rs  writer.rs
rust/crates/sz-core/: Cargo.toml
rust/crates/sz-core/src/: error.rs  lib.rs  types.rs
rust/crates/sz-crypto/: Cargo.toml
rust/crates/sz-crypto/src/: aes.rs  lib.rs  password.rs
rust/crates/sz-ffi/: Cargo.toml
rust/crates/sz-ffi/src/: api.rs  c_api.rs  frb_generated.rs  jni_bridge.rs  lib.rs
rust/crates/sz-filename/: Cargo.toml
rust/crates/sz-filename/src/: lib.rs  schemes.rs
rust/crates/sz-photo-sync/: Cargo.toml
rust/crates/sz-photo-sync/src/: diff.rs  exif.rs  index.rs  lib.rs  privacy.rs  scanner.rs
rust/crates/sz-webdav/: Cargo.toml
rust/crates/sz-webdav/src/: client.rs  lib.rs
scripts/: build_android_rust.ps1  build_apk.ps1
test/: widget_test.dart
