[workspace]
resolver = "2"
members = [
    "crates/sz-core",
    "crates/sz-compress",
    "crates/sz-crypto",
    "crates/sz-webdav",
    "crates/sz-filename",
    "crates/sz-photo-sync",
    "crates/sz-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SecureZip Team"]

[workspace.dependencies]
# 核心依赖
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# 压缩相关
sevenz-rust = { version = "0.6", features = ["zstd", "aes256", "bzip2"] }
zstd = { version = "0.13", features = ["zstdmt"] }
tar = "0.4"
flate2 = "1.0"
ruzstd = "0.7"  # 纯 Rust zstd 解压实现

# 加密相关
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
argon2 = "0.5"
hkdf = "0.12"

# 数据完整性与恢复
crc32fast = "1.3"
reed-solomon-erasure = "6.0"
byteorder = "1.5"

# 并行处理
rayon = "1.10"

# WebDAV
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
quick-xml = "0.31"

# 目录遍历
walkdir = "2.5"

# EXIF 解析
kamadak-exif = "0.5"

# JNI
jni = "0.21"

# 工具
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
