[package]
name = "sz-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
sz-core = { path = "../sz-core" }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
