[package]
name = "sz-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sz-core = { path = "../sz-core" }
sz-compress = { path = "../sz-compress" }
sz-crypto = { path = "../sz-crypto" }
# sz-webdav = { path = "../sz-webdav" }  # WebDAV 需要 OpenSSL，暂时禁用
sz-filename = { path = "../sz-filename" }
# flutter_rust_bridge = { workspace = true }  # 使用手动 C ABI，不需要 FRB
sevenz-rust = { workspace = true }   # 7z 支持 ✅
zstd = { workspace = true }          # Zstd 压缩 ✅
aes-gcm = { workspace = true }       # AES-GCM 加密 ✅
argon2 = { workspace = true }        # 密码派生密钥 ✅ (专业!)
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
base64 = { workspace = true }
