[package]
name = "sz-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sz-core = { path = "../sz-core" }
sz-compress = { path = "../sz-compress" }
sz-crypto = { path = "../sz-crypto" }
sz-webdav = { path = "../sz-webdav" }
sz-filename = { path = "../sz-filename" }
sz-photo-sync = { path = "../sz-photo-sync" }

# JNI
jni = { workspace = true }
anyhow = { workspace = true }

# 序列化（复杂返回值用 JSON）
serde = { workspace = true }
serde_json = { workspace = true }

# 加密 API 需要
base64 = { workspace = true }

# 时间（照片备份索引需要）
chrono = { workspace = true }

# 日志
log = { workspace = true }
env_logger = { workspace = true }
