[package]
name = "sz-filename"
version.workspace = true
edition.workspace = true

[dependencies]
sz-core = { path = "../sz-core" }
sz-crypto = { path = "../sz-crypto" }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
