[package]
name = "sz-webdav"
version.workspace = true
edition.workspace = true

[dependencies]
sz-core = { path = "../sz-core" }
reqwest = { workspace = true }
quick-xml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
